K1J-370: Fixed order of questions in overflow sheet