@@ -34,12 +34,11 @@ public class PdfDiagnosisListValueGenerator implements PdfElementValue<ElementVa
         .toList());
 
     if (hasOverflow && hasOverflowSheet(pdfConfiguration)) {
-      fields.add(0,
-          PdfField.builder()
-              .id(pdfConfiguration.overflowSheetFieldId().id())
-              .value(elementSpecification.configuration().name())
-              .append(true)
-              .build());
+      fields.addLast(PdfField.builder()
+          .id(pdfConfiguration.overflowSheetFieldId().id())
+          .value(elementSpecification.configuration().name())
+          .append(true)
+          .build());
 
     }
 
@@ -96,7 +95,7 @@ public class PdfDiagnosisListValueGenerator implements PdfElementValue<ElementVa
     return List.of(
         PdfField.builder()
             .id(pdfFieldId)
-            .value(splitText.get(0))
+            .value(splitText.getFirst())
             .appearance(pdfConfiguration.appearance())
             .build()
     );
@@ -112,13 +111,13 @@ public class PdfDiagnosisListValueGenerator implements PdfElementValue<ElementVa
             .build(),
         PdfField.builder()
             .id(pdfConfiguration.overflowSheetFieldId().id())
-            .value("Diagnosbeskrivning för diagnoskod " + diagnosis.code())
+            .value(splitText.get(1) + "\n")
             .appearance(pdfConfiguration.appearance())
             .append(true)
             .build(),
         PdfField.builder()
             .id(pdfConfiguration.overflowSheetFieldId().id())
-            .value(splitText.get(1) + "\n")
+            .value("Diagnosbeskrivning för diagnoskod " + diagnosis.code())
             .appearance(pdfConfiguration.appearance())
             .append(true)
             .build()
